--- a/index.html
+++ b/index.html
@@ -39,32 +39,36 @@
     <!-- Start Hero -->
     <section
       id="home"
-      class="pt-20 bg-[url('/images/bg-header-mobile.png')] bg-top bg-no-repeat bg-cover"
+      class="pt-20 lg:pt-28 bg-[url('/images/bg-header-mobile.png')] lg:bg-[url('/images/bg-header-desktop.png')] bg-top bg-no-repeat bg-cover"
     >
-      <div class="container">
-        <div class="flex flex-wrap justify-center items-center mx-auto px-4">
+      <div class="lg:h-screen lg:w-[70%] mx-auto">
+        <div
+          class="flex flex-wrap justify-center items-center mx-auto px-4 lg:px-0"
+        >
           <div class="img w-full self-center">
-            <img src="./images/logo.svg" class="w-20 mx-auto mb-16" />
+            <img src="./images/logo.svg" class="w-20 lg:w-36 mx-auto mb-16" />
           </div>
           <div class="w-full mx-auto mt-4">
             <h1
-              class="text-3xl font-extrabold text-center px-12 mb-4 text-primary"
+              class="text-3xl lg:text-5xl font-extrabold text-center px-9 mb-4 text-primary"
             >
               A history of everything you copy
             </h1>
-            <p class="text-center text-secondary px-8">
+            <p
+              class="text-center text-secondary px-8 lg:text-lg lg:w-3/4 mx-auto"
+            >
               Clipboard allows you to track and organize everything you copy.
               Instantly access your clipboard on all your devices.
             </p>
           </div>
 
-          <div class="button mt-6 text-white font-bold">
-            <button class="p-3 w-full lg:w-fit h-auto rounded-full bg-btn1">
+          <div class="button lg:w-1/2 mt-6 text-white font-bold lg:flex">
+            <button
+              class="p-3 w-full bg-btn1 h-auto rounded-full lg:mr-10 mb-4"
+            >
               Download for iOS
             </button>
-            <button
-              class="p-3 bg-btn2 w-full lg:w-fit mt-4 h-auto rounded-full"
-            >
+            <button class="p-3 w-full bg-btn2 h-auto rounded-full mb-4">
               Download for Mac
             </button>
           </div>
@@ -74,9 +78,9 @@
     <!-- end Hero -->
 
     <!-- Keep track of your snippets -->
-    <section>
-      <div class="container">
-        <div class="mt-14 text-center mx-auto px-4">
+    <section class="">
+      <div class="lg:w-1/2 mx-auto mb-16">
+        <div class="mt-14 lg:mt-5 text-center mx-auto px-4">
           <h3 class="text-3xl font-extrabold mb-4 px-14 text-primary">
             Keep track of your snippets
           </h3>
@@ -93,9 +97,9 @@
 
     <!-- Start Comp Image -->
     <section>
-      <div class="comp-image container px-8 mb-14">
+      <div class="comp-image px-8 mb-14 lg:flex">
         <img src="./images/image-computer.png" class="mb-10" />
-        <div class="text">
+        <div class="text lg:mt-28">
           <div class="mb-10">
             <h4 class="text-2xl mb-4 text-primary font-extrabold text-center">
               Quick Search
@@ -129,15 +133,25 @@
 
     <!-- Start Clipboard -->
     <section>
-      <div class="clipboard container mb-14">
-        <h3 class="text-3xl px-14 mb-4 text-primary font-extrabold text-center">
-          Access Clipboard anywhere
-        </h3>
-        <p class="text-secondary text-center px-6 mb-10">
-          Whether you’re on the go, or at your computer, you can access all your
-          Clipboard snippets in a few simple clicks.
-        </p>
-        <img src="./images/image-devices.png" alt="" class="px-6" />
+      <div class="clipboard mb-16 lg:w-3/4 mx-auto">
+        <div class="">
+          <h3
+            class="text-3xl px-14 mb-4 text-primary font-extrabold text-center"
+          >
+            Access Clipboard anywhere
+          </h3>
+          <p class="text-secondary text-center px-6 mb-10">
+            Whether you’re on the go, or at your computer, you can access all
+            your Clipboard snippets in a few simple clicks.
+          </p>
+        </div>
+        <div class="">
+          <img
+            src="./images/image-devices.png"
+            alt=""
+            class="px-6 lg:px-0 lg:w-full"
+          />
+        </div>
       </div>
     </section>
 
@@ -145,15 +159,15 @@
 
     <!-- Start Supercharge -->
     <section>
-      <div class="supercharge container mb-14">
+      <div class="supercharge mb-14 lg:mb-2 lg:w-3/4 mx-auto">
         <h3 class="text-3xl px-14 mb-4 text-primary font-extrabold text-center">
           Supercharge your workflow
         </h3>
         <p class="text-secondary text-center px-14 mb-14">
           We’ve got the tools to boost your productivity.
         </p>
-        <div>
-          <div class="item">
+        <div class="lg:flex mx-auto lg:justify-between block lg:items-stretch">
+          <div class="item lg:w-1/3 h-full">
             <img
               src="./images/icon-blacklist.svg"
               alt=""
@@ -167,8 +181,12 @@
               by excluding certain sources.
             </p>
           </div>
-          <div class="item">
-            <img src="./images/icon-text.svg" alt="" class="mx-auto mb-10" />
+          <div class="item lg:w-1/3 h-full">
+            <img
+              src="./images/icon-text.svg"
+              alt=""
+              class="mx-auto mb-10 lg:mb-12"
+            />
             <h5 class="text-2xl mb-4 text-primary font-extrabold text-center">
               Plain text snippets
             </h5>
@@ -176,12 +194,16 @@
               Remove unwanted formatting from copied text for a consistent look.
             </p>
           </div>
-          <div class="item">
-            <img src="./images/icon-preview.svg" alt="" class="mx-auto mb-10" />
+          <div class="item lg:w-1/3 h-full">
+            <img
+              src="./images/icon-preview.svg"
+              alt=""
+              class="mx-auto mb-10 lg:mb-12"
+            />
             <h5 class="text-2xl mb-4 text-primary font-extrabold text-center">
               Sneak preview
             </h5>
-            <p class="text-secondary text-center px-6 mb-10">
+            <p class="text-secondary text-center px-6 mb-10 lg:mb-0">
               Quick preview of all snippets on your Clipboard for easy access.
             </p>
           </div>
@@ -192,7 +214,7 @@
 
     <!-- Start Commercial -->
     <div
-      class="container flex flex-col w-1/2 justify-around items-center mx-auto h-screen mb-14"
+      class="flex flex-col lg:flex-row lg:w-3/4 lg:justify-between w-1/2 justify-around items-center mx-auto h-screen lg:h-1/3 mb-14 lg:mt-32 lg:mb-40"
     >
       <img src="./images/logo-google.png" alt="" />
       <img src="./images/logo-ibm.png" alt="" />
@@ -205,7 +227,7 @@
 
     <!-- Start Download button  -->
     <section>
-      <div class="container mb-14">
+      <div class="mb-14 lg:w-[70%] mx-auto">
         <h3 class="text-3xl font-extrabold text-center px-12 mb-4 text-primary">
           Clipboard for iOS and Mac OS
         </h3>
@@ -213,11 +235,15 @@
           Available for free on the App Store. Download for Mac or iOS, sync
           with iCloud and you’re ready to start adding to your clipboard.
         </p>
-        <div class="button mt-6 text-white font-bold w-3/5 mx-auto">
-          <button class="p-3 w-full lg:w-fit h-auto rounded-full bg-btn1 mb-4">
+        <div
+          class="button mt-6 text-white font-bold w-1/2 mx-auto lg:flex lg:justify-around"
+        >
+          <button
+            class="p-3 w-full lg:w-[40%] h-auto rounded-full bg-btn1 mb-4 lg:mb-0"
+          >
             Download for iOS
           </button>
-          <button class="p-3 w-full lg:w-fit h-auto rounded-full bg-btn2">
+          <button class="p-3 w-full lg:w-[40%] h-auto rounded-full bg-btn2">
             Download for Mac
           </button>
         </div>
@@ -228,11 +254,13 @@
 
     <!-- Start Footer -->
     <footer>
-      <div class="container">
-        <div class="logo">
+      <div class="lg:mt-36 lg:flex">
+        <div class="logo lg:w-[20%]">
           <img src="./images/logo.svg" alt="" class="w-14 mx-auto mb-12" />
         </div>
-        <div class="information text-center text-secondary px-8 mb-8">
+        <div
+          class="information text-center lg:text-left text-secondary lg:text-primary lg:font-semibold px-8 mb-8 lg:w-[40%] lg:grid grid-cols-3"
+        >
           <p class="mb-4">FAQs</p>
           <p class="mb-4">Contact Us</p>
           <p class="mb-4">Privacy Policy</p>
@@ -240,7 +268,7 @@
           <p>Install Guide</p>
         </div>
         <div
-          class="sosmed flex justify-around items-center w-1/4 mx-auto mb-14"
+          class="sosmed flex justify-around items-center w-1/4 mx-auto mb-14 lg:w-[10%]"
         >
           <img src="./images/icon-facebook.svg" alt="" />
           <img src="./images/icon-twitter.svg" alt="" />
